chore: Configure Vercel to use pnpm
Updated vercel.json to include the 'installCommand': 'pnpm install'. This change is necessary to ensure that Vercel uses the correct package manager (pnpm) for installing dependencies, as the project utilizes pnpm workspaces.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "installCommand": "pnpm install",
   "env": {
     "NEXT_PUBLIC_SOLANA_NETWORK": "devnet",
     "NEXT_PUBLIC_APP_URL": "https://sol-itaire.vercel.app"
