--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "packageManager": "pnpm@8.6.12",
   "installCommand": "pnpm install",
   "env": {
     "NEXT_PUBLIC_SOLANA_NETWORK": "devnet",
