chore: Use ENABLE_COREPACK_SHIM to fix pnpm version
Reverted the preinstall script and instead enabled corepack in Vercel via the ENABLE_COREPACK_SHIM environment variable in vercel.json. This should resolve the pnpm version mismatch during deployment.

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "deploy:programs": "anchor deploy",
     "deploy:backend": "./apps/backend/scripts/deploy.sh",
     "start:backend": "pnpm --filter @sol-itaire/backend start",
-    "bootstrap": "pnpm install && pnpm build",
-    "preinstall": "corepack enable"
+    "bootstrap": "pnpm install && pnpm build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
