--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
-  "installCommand": "pnpm install",
+  "installCommand": "npm i -g pnpm@8 && pnpm install",
   "env": {
     "NEXT_PUBLIC_SOLANA_NETWORK": "devnet",
-    "NEXT_PUBLIC_APP_URL": "https://sol-itaire.vercel.app",
-    "ENABLE_COREPACK_SHIM": "1"
+    "NEXT_PUBLIC_APP_URL": "https://sol-itaire.vercel.app"
   },
   "headers": [
     {
