--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
-        "anchor-cli": "^0.29.0",
+        "@coral-xyz/anchor-cli": "^0.29.0",
         "eslint": "^8.45.0",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6"
