--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,6 +66,7 @@
     "typescript": "^5.1.6",
     "@next/bundle-analyzer": "^14.0.0",
     "vercel": "^32.0.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "critters": "^0.0.22"
   }
 }
